<resources>
    <string name="title_activity_maps">Oslofjorden</string>
    <string name="google_app_id">29427722334</string>
    <string name="kyststier">Kyststier</string>
    <string name="badeplasser">Badeplasser</string>
    <string name="b_tramper">Båtramper</string>
    <string name="butikk">Butikk</string>
    <string name="spisesteder">Spisesteder</string>
    <string name="fyr">Fyr</string>
    <string name="bunkers">Bunkers</string>
    <string name="marinaer">Marinaer</string>
    <string name="gjestehavner">Gjestehavner</string>
    <string name="parkering_transport">Parkering/Transport</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="uthavner">Uthavner</string>
    <string name="kran_truck">Kran/Truck</string>
    <string name="b_tbutikker">Båtbutikker</string>
    <string name="campingplasser">Campingplasser</string>
    <string name="wc">WC</string>
    <string name="fiskeplasser">Fiskeplasser</string>
    <string name="mer">Mer..</string>
    <string name="mer_info">Mer info</string>
    <string name="velg_info_knapp">Velg info knapp</string>
    <string name="skru_p_posisjon">Skru på posisjon</string>
    <string name="vi_setter_pris_p_om_du_vil_st_tte_oslofjorden_com_og_dermed_fjerne_reklamen">Vi setter pris på om du vil støtte oslofjorden.com og dermed fjerne reklamen.</string>
    <string name="kj_p">Kjøp</string>
    <string name="app_name">Oslofjorden Båt og Turguide</string>
    <string name="developer_error">Developer error</string>
    <string name="error">An error occured</string>
    <string name="billing_unavailable">Billing unavailable</string>
    <string name="feature_not_supported">Feature not supported</string>
    <string name="service_disconnected">Service disconnected</string>
    <string name="item_unavailable">Items unavailable</string>
    <string name="user_cancelled">User cancelled</string>
    <string name="item_not_owned">Item not owned</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="bottom_sheet_loading_data">Oslofjorden laster inn - vennligst vent…</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
