<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow, this is not used!!!!!!!!!!!!!!!!!!!!    -->

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/kyststier"
            android:title="@string/kyststier"
            app:showAsAction="always"
            android:checkable="true"

            >

        </item>

        <item
            android:id="@+id/badeplasser"
            android:title="@string/badeplasser"
            app:showAsAction="always">


        </item>

        <item
            android:id="@+id/baatramper"
            android:title="@string/b_tramper"
            app:showAsAction="always">

        </item>

        <item
            android:id="@+id/butikk"
            android:title="@string/butikk"
            app:showAsAction="never"

            >

        </item>

        <item
            android:id="@+id/spisested"
            android:title="@string/spisesteder"
            app:showAsAction="never">

        </item>

        <item
            android:id="@+id/fyr"
            android:title="@string/fyr"
            app:showAsAction="never">

        </item>

        <item
            android:id="@+id/bunkers"
            android:title="Bunkers"
            app:showAsAction="never">

        </item>

        <item
            android:id="@+id/marina"
            android:title="Marinaer"
            app:showAsAction="never">

        </item>
        <item
            android:id="@+id/gjestehavn"
            android:title="Gjestehavner"
            app:showAsAction="never">

        </item>
        <item
            android:id="@+id/parkeringTrans"
            android:title="Parkering/Transport"
            app:showAsAction="never">

        </item>
        <item
            android:id="@+id/poi"
            android:title="Point of interest"
            app:showAsAction="never">

        </item>


        <item
            android:id="@+id/uthavn"
            android:title="Uthavner"
            app:showAsAction="never">

        </item>


        <item
            android:id="@+id/mer"
            android:title="Mer.."
            android:checkable="false">

            <menu>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/kranTruck"
                        android:title="Kran/Truck"
                        app:showAsAction="never">

                    </item>
                    <item
                        android:id="@+id/baatbutikk"
                        android:title="Båtbutikker"
                        app:showAsAction="never">

                    </item>
                    <item
                        android:id="@+id/campingplass"
                        android:title="Campingplasser"
                        app:showAsAction="never">

                    </item>
                    <item
                        android:id="@+id/wc"
                        android:title="WC"
                        app:showAsAction="never">

                    </item>

                    <item
                        android:id="@+id/fiskeplasser"
                        android:title="Fiskeplasser"
                        app:showAsAction="never">

                    </item>
                </group>
            </menu>

        </item>


    </group>


</menu>